// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb in RTL renders Collapsed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <nav
          aria-label="Breadcrumb"
        >
          <ol
            class="flex flex-wrap gap-2 items-center text-moon-14"
          >
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <span
                class="text-trunks transition-colors duration-200 hover:text-bulma"
              >
                <a
                  href=""
                >
                  Home
                </a>
              </span>
              <svg
                class="rtl:rotate-180"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </li>
            <li
              class="relative"
            >
              <button
                class="px-1 h-8 py-1 gap-1 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-trunks bg-transparent hover:text-bulma"
                type="button"
              >
                <svg
                  class="text-moon-16"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24.222 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM8.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM16.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385z"
                    stroke="currentColor"
                    stroke-linecap="round"
                  />
                </svg>
                <span
                  aria-hidden="true"
                  class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
                />
              </button>
            </li>
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <svg
                class="rtl:rotate-180"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span
                class="text-trunks transition-colors duration-200 hover:text-bulma"
              >
                <a
                  href=""
                >
                  Page 4
                </a>
              </span>
            </li>
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <svg
                class="rtl:rotate-180"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span
                class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
              >
                <span>
                  Current page
                </span>
              </span>
            </li>
          </ol>
        </nav>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex flex-wrap gap-2 items-center text-moon-14"
        >
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Home
              </a>
            </span>
            <svg
              class="rtl:rotate-180"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </li>
          <li
            class="relative"
          >
            <button
              class="px-1 h-8 py-1 gap-1 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-trunks bg-transparent hover:text-bulma"
              type="button"
            >
              <svg
                class="text-moon-16"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24.222 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM8.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM16.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385z"
                  stroke="currentColor"
                  stroke-linecap="round"
                />
              </svg>
              <span
                aria-hidden="true"
                class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
              />
            </button>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Page 4
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
            >
              <span>
                Current page
              </span>
            </span>
          </li>
        </ol>
      </nav>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Breadcrumb in RTL renders FourItems 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <nav
          aria-label="Breadcrumb"
        >
          <ol
            class="flex flex-wrap gap-2 items-center text-moon-14"
          >
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <span
                class="text-trunks transition-colors duration-200 hover:text-bulma"
              >
                <a
                  href=""
                >
                  Home
                </a>
              </span>
            </li>
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <svg
                class="rtl:rotate-180 text-moon-16"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span
                class="text-trunks transition-colors duration-200 hover:text-bulma"
              >
                <a
                  href=""
                >
                  Page 1
                </a>
              </span>
            </li>
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <svg
                class="rtl:rotate-180 text-moon-16"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span
                class="text-trunks transition-colors duration-200 hover:text-bulma"
              >
                <a
                  href=""
                >
                  Page 2
                </a>
              </span>
            </li>
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <svg
                class="rtl:rotate-180 text-moon-16"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span
                class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
              >
                <span>
                  Current page
                </span>
              </span>
            </li>
          </ol>
        </nav>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex flex-wrap gap-2 items-center text-moon-14"
        >
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Home
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180 text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Page 1
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180 text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Page 2
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180 text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
            >
              <span>
                Current page
              </span>
            </span>
          </li>
        </ol>
      </nav>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Breadcrumb in RTL renders OneItem 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <nav
          aria-label="Breadcrumb"
        >
          <ol
            class="flex flex-wrap gap-2 items-center text-moon-14"
          >
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <span
                class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
              >
                <span>
                  Current page
                </span>
              </span>
            </li>
          </ol>
        </nav>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex flex-wrap gap-2 items-center text-moon-14"
        >
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <span
              class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
            >
              <span>
                Current page
              </span>
            </span>
          </li>
        </ol>
      </nav>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Breadcrumb in RTL renders TwoItems 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <nav
          aria-label="Breadcrumb"
        >
          <ol
            class="flex flex-wrap gap-2 items-center text-moon-14"
          >
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <span
                class="text-trunks transition-colors duration-200 hover:text-bulma"
              >
                <a
                  href=""
                >
                  Home
                </a>
              </span>
            </li>
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <svg
                class="rtl:rotate-180 text-moon-16"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span
                class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
              >
                <span>
                  Current page
                </span>
              </span>
            </li>
          </ol>
        </nav>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex flex-wrap gap-2 items-center text-moon-14"
        >
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Home
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180 text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
            >
              <span>
                Current page
              </span>
            </span>
          </li>
        </ol>
      </nav>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Breadcrumb in RTL renders with custom divider 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <nav
          aria-label="Breadcrumb"
        >
          <ol
            class="flex flex-wrap gap-2 items-center text-moon-14"
          >
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <span
                class="text-trunks transition-colors duration-200 hover:text-bulma"
              >
                <a
                  href=""
                >
                  <svg
                    class="text-moon-24"
                    fill="none"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.5 16.5237H7H6.5ZM6.5 24.0439H6H6.5ZM24.0385 25.5V25V25.5ZM7.96154 25.5V26H7.96154L7.96154 25.5ZM25.5 16.5238H25H25.5ZM25.5 24.0439H26H25.5ZM24.7266 14.5504L24.3595 14.8899L24.7266 14.5504ZM18.1497 7.43887L17.7826 7.77836L18.1497 7.43887ZM13.8503 7.43887L14.2174 7.77835L13.8503 7.43887ZM7.27339 14.5504L6.9063 14.2109H6.9063L7.27339 14.5504ZM13.0769 18.2194H13.5769H13.0769ZM13.0769 24.7719H12.5769H13.0769ZM18.1923 25.5V25V25.5ZM13.8077 25.5V26V25.5ZM18.9231 18.2195L19.4231 18.2195V18.2195H18.9231ZM18.9231 24.7719H18.4231H18.9231ZM18.1923 17.4914L18.1923 17.9914L18.1923 17.4914ZM13.8077 17.4914L13.8077 17.9914H13.8077L13.8077 17.4914ZM6 16.5237L6 24.0439H7L7 16.5237H6ZM24.0385 25L7.96154 25L7.96154 26L24.0385 26V25ZM25 16.5238V24.0439H26V16.5238H25ZM25.0937 14.2109L18.5168 7.09939L17.7826 7.77836L24.3595 14.8899L25.0937 14.2109ZM13.4832 7.09938L6.9063 14.2109L7.64047 14.8899L14.2174 7.77835L13.4832 7.09938ZM18.5168 7.09939C17.1611 5.63354 14.8389 5.63354 13.4832 7.09938L14.2174 7.77835C15.1772 6.74055 16.8228 6.74055 17.7826 7.77836L18.5168 7.09939ZM26 16.5238C26 15.6665 25.6763 14.8409 25.0937 14.2109L24.3595 14.8899C24.7715 15.3354 25 15.9187 25 16.5238H26ZM7 16.5237C7 15.9186 7.22845 15.3354 7.64047 14.8899L6.9063 14.2109C6.32371 14.8409 6 15.6665 6 16.5237H7ZM6 24.0439C6 25.126 6.87996 26 7.96154 26V25C7.42874 25 7 24.5702 7 24.0439H6ZM24.0385 26C25.12 26 26 25.126 26 24.0439H25C25 24.5702 24.5713 25 24.0385 25V26ZM12.5769 18.2194L12.5769 24.7719H13.5769L13.5769 18.2194H12.5769ZM18.1923 25H13.8077V26H18.1923V25ZM18.4231 18.2195L18.4231 24.7719H19.4231L19.4231 18.2195L18.4231 18.2195ZM18.1923 16.9914L13.8077 16.9914L13.8077 17.9914L18.1923 17.9914L18.1923 16.9914ZM19.4231 18.2195C19.4231 17.5395 18.8703 16.9914 18.1923 16.9914L18.1923 17.9914C18.3215 17.9914 18.4231 18.0953 18.4231 18.2195H19.4231ZM13.5769 18.2194C13.5769 18.0952 13.6785 17.9914 13.8077 17.9914L13.8077 16.9914C13.1297 16.9914 12.5769 17.5395 12.5769 18.2194H13.5769ZM12.5769 24.7719C12.5769 25.4519 13.1297 26 13.8077 26V25C13.6785 25 13.5769 24.8961 13.5769 24.7719H12.5769ZM18.1923 26C18.8703 26 19.4231 25.4519 19.4231 24.7719H18.4231C18.4231 24.8961 18.3215 25 18.1923 25V26Z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </span>
              <svg
                class="text-moon-20"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.5 7L20.5 16L11.5 25"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </li>
            <li
              class="relative"
            >
              <button
                class="px-1 h-8 py-1 gap-1 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-trunks bg-transparent hover:text-bulma"
                type="button"
              >
                <svg
                  class="text-moon-16"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24.222 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM8.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM16.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385z"
                    stroke="currentColor"
                    stroke-linecap="round"
                  />
                </svg>
                <span
                  aria-hidden="true"
                  class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
                />
              </button>
            </li>
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <svg
                class="text-moon-20"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.5 7L20.5 16L11.5 25"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span
                class="text-trunks transition-colors duration-200 hover:text-bulma"
              >
                <a
                  href=""
                >
                  Page 4
                </a>
              </span>
            </li>
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <svg
                class="text-moon-20"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.5 7L20.5 16L11.5 25"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span
                class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
              >
                <span>
                  Current page
                </span>
              </span>
            </li>
          </ol>
        </nav>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex flex-wrap gap-2 items-center text-moon-14"
        >
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                <svg
                  class="text-moon-24"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.5 16.5237H7H6.5ZM6.5 24.0439H6H6.5ZM24.0385 25.5V25V25.5ZM7.96154 25.5V26H7.96154L7.96154 25.5ZM25.5 16.5238H25H25.5ZM25.5 24.0439H26H25.5ZM24.7266 14.5504L24.3595 14.8899L24.7266 14.5504ZM18.1497 7.43887L17.7826 7.77836L18.1497 7.43887ZM13.8503 7.43887L14.2174 7.77835L13.8503 7.43887ZM7.27339 14.5504L6.9063 14.2109H6.9063L7.27339 14.5504ZM13.0769 18.2194H13.5769H13.0769ZM13.0769 24.7719H12.5769H13.0769ZM18.1923 25.5V25V25.5ZM13.8077 25.5V26V25.5ZM18.9231 18.2195L19.4231 18.2195V18.2195H18.9231ZM18.9231 24.7719H18.4231H18.9231ZM18.1923 17.4914L18.1923 17.9914L18.1923 17.4914ZM13.8077 17.4914L13.8077 17.9914H13.8077L13.8077 17.4914ZM6 16.5237L6 24.0439H7L7 16.5237H6ZM24.0385 25L7.96154 25L7.96154 26L24.0385 26V25ZM25 16.5238V24.0439H26V16.5238H25ZM25.0937 14.2109L18.5168 7.09939L17.7826 7.77836L24.3595 14.8899L25.0937 14.2109ZM13.4832 7.09938L6.9063 14.2109L7.64047 14.8899L14.2174 7.77835L13.4832 7.09938ZM18.5168 7.09939C17.1611 5.63354 14.8389 5.63354 13.4832 7.09938L14.2174 7.77835C15.1772 6.74055 16.8228 6.74055 17.7826 7.77836L18.5168 7.09939ZM26 16.5238C26 15.6665 25.6763 14.8409 25.0937 14.2109L24.3595 14.8899C24.7715 15.3354 25 15.9187 25 16.5238H26ZM7 16.5237C7 15.9186 7.22845 15.3354 7.64047 14.8899L6.9063 14.2109C6.32371 14.8409 6 15.6665 6 16.5237H7ZM6 24.0439C6 25.126 6.87996 26 7.96154 26V25C7.42874 25 7 24.5702 7 24.0439H6ZM24.0385 26C25.12 26 26 25.126 26 24.0439H25C25 24.5702 24.5713 25 24.0385 25V26ZM12.5769 18.2194L12.5769 24.7719H13.5769L13.5769 18.2194H12.5769ZM18.1923 25H13.8077V26H18.1923V25ZM18.4231 18.2195L18.4231 24.7719H19.4231L19.4231 18.2195L18.4231 18.2195ZM18.1923 16.9914L13.8077 16.9914L13.8077 17.9914L18.1923 17.9914L18.1923 16.9914ZM19.4231 18.2195C19.4231 17.5395 18.8703 16.9914 18.1923 16.9914L18.1923 17.9914C18.3215 17.9914 18.4231 18.0953 18.4231 18.2195H19.4231ZM13.5769 18.2194C13.5769 18.0952 13.6785 17.9914 13.8077 17.9914L13.8077 16.9914C13.1297 16.9914 12.5769 17.5395 12.5769 18.2194H13.5769ZM12.5769 24.7719C12.5769 25.4519 13.1297 26 13.8077 26V25C13.6785 25 13.5769 24.8961 13.5769 24.7719H12.5769ZM18.1923 26C18.8703 26 19.4231 25.4519 19.4231 24.7719H18.4231C18.4231 24.8961 18.3215 25 18.1923 25V26Z"
                    fill="currentColor"
                  />
                </svg>
              </a>
            </span>
            <svg
              class="text-moon-20"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.5 7L20.5 16L11.5 25"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </li>
          <li
            class="relative"
          >
            <button
              class="px-1 h-8 py-1 gap-1 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-trunks bg-transparent hover:text-bulma"
              type="button"
            >
              <svg
                class="text-moon-16"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24.222 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM8.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM16.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385z"
                  stroke="currentColor"
                  stroke-linecap="round"
                />
              </svg>
              <span
                aria-hidden="true"
                class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
              />
            </button>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="text-moon-20"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.5 7L20.5 16L11.5 25"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Page 4
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="text-moon-20"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.5 7L20.5 16L11.5 25"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
            >
              <span>
                Current page
              </span>
            </span>
          </li>
        </ol>
      </nav>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Breadcrumb renders Collapsed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex flex-wrap gap-2 items-center text-moon-14"
        >
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Home
              </a>
            </span>
            <svg
              class="rtl:rotate-180"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </li>
          <li
            class="relative"
          >
            <button
              class="px-1 h-8 py-1 gap-1 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-trunks bg-transparent hover:text-bulma"
              type="button"
            >
              <svg
                class="text-moon-16"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24.222 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM8.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM16.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385z"
                  stroke="currentColor"
                  stroke-linecap="round"
                />
              </svg>
              <span
                aria-hidden="true"
                class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
              />
            </button>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Page 4
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
            >
              <span>
                Current page
              </span>
            </span>
          </li>
        </ol>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumb"
    >
      <ol
        class="flex flex-wrap gap-2 items-center text-moon-14"
      >
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <span
            class="text-trunks transition-colors duration-200 hover:text-bulma"
          >
            <a
              href=""
            >
              Home
            </a>
          </span>
          <svg
            class="rtl:rotate-180"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </li>
        <li
          class="relative"
        >
          <button
            class="px-1 h-8 py-1 gap-1 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-trunks bg-transparent hover:text-bulma"
            type="button"
          >
            <svg
              class="text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24.222 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM8.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM16.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385z"
                stroke="currentColor"
                stroke-linecap="round"
              />
            </svg>
            <span
              aria-hidden="true"
              class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </li>
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <svg
            class="rtl:rotate-180"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            class="text-trunks transition-colors duration-200 hover:text-bulma"
          >
            <a
              href=""
            >
              Page 4
            </a>
          </span>
        </li>
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <svg
            class="rtl:rotate-180"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
          >
            <span>
              Current page
            </span>
          </span>
        </li>
      </ol>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Breadcrumb renders FourItems 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex flex-wrap gap-2 items-center text-moon-14"
        >
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Home
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180 text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Page 1
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180 text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Page 2
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180 text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
            >
              <span>
                Current page
              </span>
            </span>
          </li>
        </ol>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumb"
    >
      <ol
        class="flex flex-wrap gap-2 items-center text-moon-14"
      >
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <span
            class="text-trunks transition-colors duration-200 hover:text-bulma"
          >
            <a
              href=""
            >
              Home
            </a>
          </span>
        </li>
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <svg
            class="rtl:rotate-180 text-moon-16"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            class="text-trunks transition-colors duration-200 hover:text-bulma"
          >
            <a
              href=""
            >
              Page 1
            </a>
          </span>
        </li>
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <svg
            class="rtl:rotate-180 text-moon-16"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            class="text-trunks transition-colors duration-200 hover:text-bulma"
          >
            <a
              href=""
            >
              Page 2
            </a>
          </span>
        </li>
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <svg
            class="rtl:rotate-180 text-moon-16"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
          >
            <span>
              Current page
            </span>
          </span>
        </li>
      </ol>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Breadcrumb renders OneItem 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex flex-wrap gap-2 items-center text-moon-14"
        >
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <span
              class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
            >
              <span>
                Current page
              </span>
            </span>
          </li>
        </ol>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumb"
    >
      <ol
        class="flex flex-wrap gap-2 items-center text-moon-14"
      >
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <span
            class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
          >
            <span>
              Current page
            </span>
          </span>
        </li>
      </ol>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Breadcrumb renders TwoItems 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex flex-wrap gap-2 items-center text-moon-14"
        >
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Home
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180 text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
            >
              <span>
                Current page
              </span>
            </span>
          </li>
        </ol>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumb"
    >
      <ol
        class="flex flex-wrap gap-2 items-center text-moon-14"
      >
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <span
            class="text-trunks transition-colors duration-200 hover:text-bulma"
          >
            <a
              href=""
            >
              Home
            </a>
          </span>
        </li>
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <svg
            class="rtl:rotate-180 text-moon-16"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
          >
            <span>
              Current page
            </span>
          </span>
        </li>
      </ol>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Breadcrumb renders with custom divider 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex flex-wrap gap-2 items-center text-moon-14"
        >
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                <svg
                  class="text-moon-24"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.5 16.5237H7H6.5ZM6.5 24.0439H6H6.5ZM24.0385 25.5V25V25.5ZM7.96154 25.5V26H7.96154L7.96154 25.5ZM25.5 16.5238H25H25.5ZM25.5 24.0439H26H25.5ZM24.7266 14.5504L24.3595 14.8899L24.7266 14.5504ZM18.1497 7.43887L17.7826 7.77836L18.1497 7.43887ZM13.8503 7.43887L14.2174 7.77835L13.8503 7.43887ZM7.27339 14.5504L6.9063 14.2109H6.9063L7.27339 14.5504ZM13.0769 18.2194H13.5769H13.0769ZM13.0769 24.7719H12.5769H13.0769ZM18.1923 25.5V25V25.5ZM13.8077 25.5V26V25.5ZM18.9231 18.2195L19.4231 18.2195V18.2195H18.9231ZM18.9231 24.7719H18.4231H18.9231ZM18.1923 17.4914L18.1923 17.9914L18.1923 17.4914ZM13.8077 17.4914L13.8077 17.9914H13.8077L13.8077 17.4914ZM6 16.5237L6 24.0439H7L7 16.5237H6ZM24.0385 25L7.96154 25L7.96154 26L24.0385 26V25ZM25 16.5238V24.0439H26V16.5238H25ZM25.0937 14.2109L18.5168 7.09939L17.7826 7.77836L24.3595 14.8899L25.0937 14.2109ZM13.4832 7.09938L6.9063 14.2109L7.64047 14.8899L14.2174 7.77835L13.4832 7.09938ZM18.5168 7.09939C17.1611 5.63354 14.8389 5.63354 13.4832 7.09938L14.2174 7.77835C15.1772 6.74055 16.8228 6.74055 17.7826 7.77836L18.5168 7.09939ZM26 16.5238C26 15.6665 25.6763 14.8409 25.0937 14.2109L24.3595 14.8899C24.7715 15.3354 25 15.9187 25 16.5238H26ZM7 16.5237C7 15.9186 7.22845 15.3354 7.64047 14.8899L6.9063 14.2109C6.32371 14.8409 6 15.6665 6 16.5237H7ZM6 24.0439C6 25.126 6.87996 26 7.96154 26V25C7.42874 25 7 24.5702 7 24.0439H6ZM24.0385 26C25.12 26 26 25.126 26 24.0439H25C25 24.5702 24.5713 25 24.0385 25V26ZM12.5769 18.2194L12.5769 24.7719H13.5769L13.5769 18.2194H12.5769ZM18.1923 25H13.8077V26H18.1923V25ZM18.4231 18.2195L18.4231 24.7719H19.4231L19.4231 18.2195L18.4231 18.2195ZM18.1923 16.9914L13.8077 16.9914L13.8077 17.9914L18.1923 17.9914L18.1923 16.9914ZM19.4231 18.2195C19.4231 17.5395 18.8703 16.9914 18.1923 16.9914L18.1923 17.9914C18.3215 17.9914 18.4231 18.0953 18.4231 18.2195H19.4231ZM13.5769 18.2194C13.5769 18.0952 13.6785 17.9914 13.8077 17.9914L13.8077 16.9914C13.1297 16.9914 12.5769 17.5395 12.5769 18.2194H13.5769ZM12.5769 24.7719C12.5769 25.4519 13.1297 26 13.8077 26V25C13.6785 25 13.5769 24.8961 13.5769 24.7719H12.5769ZM18.1923 26C18.8703 26 19.4231 25.4519 19.4231 24.7719H18.4231C18.4231 24.8961 18.3215 25 18.1923 25V26Z"
                    fill="currentColor"
                  />
                </svg>
              </a>
            </span>
            <svg
              class="text-moon-20"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.5 7L20.5 16L11.5 25"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </li>
          <li
            class="relative"
          >
            <button
              class="px-1 h-8 py-1 gap-1 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-trunks bg-transparent hover:text-bulma"
              type="button"
            >
              <svg
                class="text-moon-16"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24.222 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM8.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM16.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385z"
                  stroke="currentColor"
                  stroke-linecap="round"
                />
              </svg>
              <span
                aria-hidden="true"
                class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
              />
            </button>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="text-moon-20"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.5 7L20.5 16L11.5 25"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Page 4
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="text-moon-20"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.5 7L20.5 16L11.5 25"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
            >
              <span>
                Current page
              </span>
            </span>
          </li>
        </ol>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumb"
    >
      <ol
        class="flex flex-wrap gap-2 items-center text-moon-14"
      >
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <span
            class="text-trunks transition-colors duration-200 hover:text-bulma"
          >
            <a
              href=""
            >
              <svg
                class="text-moon-24"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 16.5237H7H6.5ZM6.5 24.0439H6H6.5ZM24.0385 25.5V25V25.5ZM7.96154 25.5V26H7.96154L7.96154 25.5ZM25.5 16.5238H25H25.5ZM25.5 24.0439H26H25.5ZM24.7266 14.5504L24.3595 14.8899L24.7266 14.5504ZM18.1497 7.43887L17.7826 7.77836L18.1497 7.43887ZM13.8503 7.43887L14.2174 7.77835L13.8503 7.43887ZM7.27339 14.5504L6.9063 14.2109H6.9063L7.27339 14.5504ZM13.0769 18.2194H13.5769H13.0769ZM13.0769 24.7719H12.5769H13.0769ZM18.1923 25.5V25V25.5ZM13.8077 25.5V26V25.5ZM18.9231 18.2195L19.4231 18.2195V18.2195H18.9231ZM18.9231 24.7719H18.4231H18.9231ZM18.1923 17.4914L18.1923 17.9914L18.1923 17.4914ZM13.8077 17.4914L13.8077 17.9914H13.8077L13.8077 17.4914ZM6 16.5237L6 24.0439H7L7 16.5237H6ZM24.0385 25L7.96154 25L7.96154 26L24.0385 26V25ZM25 16.5238V24.0439H26V16.5238H25ZM25.0937 14.2109L18.5168 7.09939L17.7826 7.77836L24.3595 14.8899L25.0937 14.2109ZM13.4832 7.09938L6.9063 14.2109L7.64047 14.8899L14.2174 7.77835L13.4832 7.09938ZM18.5168 7.09939C17.1611 5.63354 14.8389 5.63354 13.4832 7.09938L14.2174 7.77835C15.1772 6.74055 16.8228 6.74055 17.7826 7.77836L18.5168 7.09939ZM26 16.5238C26 15.6665 25.6763 14.8409 25.0937 14.2109L24.3595 14.8899C24.7715 15.3354 25 15.9187 25 16.5238H26ZM7 16.5237C7 15.9186 7.22845 15.3354 7.64047 14.8899L6.9063 14.2109C6.32371 14.8409 6 15.6665 6 16.5237H7ZM6 24.0439C6 25.126 6.87996 26 7.96154 26V25C7.42874 25 7 24.5702 7 24.0439H6ZM24.0385 26C25.12 26 26 25.126 26 24.0439H25C25 24.5702 24.5713 25 24.0385 25V26ZM12.5769 18.2194L12.5769 24.7719H13.5769L13.5769 18.2194H12.5769ZM18.1923 25H13.8077V26H18.1923V25ZM18.4231 18.2195L18.4231 24.7719H19.4231L19.4231 18.2195L18.4231 18.2195ZM18.1923 16.9914L13.8077 16.9914L13.8077 17.9914L18.1923 17.9914L18.1923 16.9914ZM19.4231 18.2195C19.4231 17.5395 18.8703 16.9914 18.1923 16.9914L18.1923 17.9914C18.3215 17.9914 18.4231 18.0953 18.4231 18.2195H19.4231ZM13.5769 18.2194C13.5769 18.0952 13.6785 17.9914 13.8077 17.9914L13.8077 16.9914C13.1297 16.9914 12.5769 17.5395 12.5769 18.2194H13.5769ZM12.5769 24.7719C12.5769 25.4519 13.1297 26 13.8077 26V25C13.6785 25 13.5769 24.8961 13.5769 24.7719H12.5769ZM18.1923 26C18.8703 26 19.4231 25.4519 19.4231 24.7719H18.4231C18.4231 24.8961 18.3215 25 18.1923 25V26Z"
                  fill="currentColor"
                />
              </svg>
            </a>
          </span>
          <svg
            class="text-moon-20"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.5 7L20.5 16L11.5 25"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </li>
        <li
          class="relative"
        >
          <button
            class="px-1 h-8 py-1 gap-1 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-trunks bg-transparent hover:text-bulma"
            type="button"
          >
            <svg
              class="text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24.222 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM8.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM16.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385z"
                stroke="currentColor"
                stroke-linecap="round"
              />
            </svg>
            <span
              aria-hidden="true"
              class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </li>
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <svg
            class="text-moon-20"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.5 7L20.5 16L11.5 25"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            class="text-trunks transition-colors duration-200 hover:text-bulma"
          >
            <a
              href=""
            >
              Page 4
            </a>
          </span>
        </li>
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <svg
            class="text-moon-20"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.5 7L20.5 16L11.5 25"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
          >
            <span>
              Current page
            </span>
          </span>
        </li>
      </ol>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
